--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Rishabh Series</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="rishabhkanojia, rishabh kanojia, Kanojia rishabh, Rishabhkanojia, RishabhK, RK, Rk rishabh, Rkrishabh, rkrishabh, Rishabh Kanojia, Rishabh Website, rishabh kanojia tk, rishabhkanojia.com, iamrishabh, imrishabh">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
