--- a/index.html
+++ b/index.html
@@ -80,7 +80,24 @@
             </div>
           </div>
         </div>
-        
+         <div class="col-lg-4 col-md-4 col-12 mb-3">
+          <div class="card ">
+            <img class="card-img-top img-thumbnail" src="Images/boo.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Boo Series</h5>
+              <a href="https://drive.google.com/file/d/1EfahMcpe1L0TSS2G2mLJ93gTIAyA7SV3/view?usp=sharing" class="btn btn-warning text-white">Watch / Download</a>
+            </div>
+          </div>
+        </div>
+         <div class="col-lg-4 col-md-4 col-12 mb-3">
+          <div class="card ">
+            <img class="card-img-top img-thumbnail" src="Images/pan.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Panchayat Series</h5>
+              <a href="panchayt.html" class="btn btn-info text-white">Watch All series</a>
+            </div>
+          </div>
+        </div>
         
       </div>
     </div>
