--- a/index.html
+++ b/index.html
@@ -99,6 +99,42 @@
           </div>
         </div>
         
+         <div class="col-lg-4 col-md-4 col-12 mb-3">
+          <div class="card ">
+            <img class="card-img-top img-thumbnail" src="Images/it.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">IT Movie</h5>
+              <a href="https://drive.google.com/file/d/1K-jOVi_TRuxPC4C9NWF6-BdtxdGlhHZG/view?usp=sharing" class="btn btn-success text-white">Watch / Download</a>
+            </div>
+          </div>
+        </div>
+         <div class="col-lg-4 col-md-4 col-12 mb-3">
+          <div class="card ">
+            <img class="card-img-top img-thumbnail" src="Images/live telecast.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Live Telecast</h5>
+              <a href="live.html" class="btn btn-danger text-white">Watch All series</a>
+            </div>
+          </div>
+        </div>
+         <div class="col-lg-4 col-md-4 col-12 mb-3">
+          <div class="card ">
+            <img class="card-img-top img-thumbnail" src="Images/gravity.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">The Man Without Gravity</h5>
+              <a href="https://drive.google.com/file/d/1UEecq46shwTU7s4hvKn6PMMDhHFR5KUt/view?usp=sharing" class="btn btn-success text-white">Watch / Download</a>
+            </div>
+          </div>
+        </div>
+         <div class="col-lg-4 col-md-4 col-12 mb-3">
+          <div class="card ">
+            <img class="card-img-top img-thumbnail" src="Images/angry.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Angry Bird 2</h5>
+              <a href="https://drive.google.com/file/d/1Kqr3ZekymKc1S5MP5nFvuPcqNjjFO7R6/view?usp=sharing" class="btn btn-warning text-white">Watch / Download</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
