--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           </div>
         </div>
         
-         <div class="col-lg-4 col-md-4 col-12 mb-3">
+<!--          <div class="col-lg-4 col-md-4 col-12 mb-3">
           <div class="card ">
             <img class="card-img-top img-thumbnail" src="Images/it.jpg" alt="Card image cap">
             <div class="card-body">
@@ -107,7 +107,7 @@
               <a href="https://drive.google.com/file/d/1K-jOVi_TRuxPC4C9NWF6-BdtxdGlhHZG/view?usp=sharing" class="btn btn-success text-white">Watch / Download</a>
             </div>
           </div>
-        </div>
+        </div> -->
          <div class="col-lg-4 col-md-4 col-12 mb-3">
           <div class="card ">
             <img class="card-img-top img-thumbnail" src="Images/live telecast.jpg" alt="Card image cap">
